--- a/hNext/hNext.WebClient/Views/Shared/Components/RecordTemplateEditor/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/RecordTemplateEditor/Default.cshtml
@@ -86,16 +86,18 @@
             <div class="d-flex flex-column mx-3">
                 <div><span class="text-danger" v-if="noFieldsError">@Localizer[nameof(Resources.NoFieldsError)]</span></div>
                 <div class="d-flex flex-row" :class="{'input-validation-error': noFieldsError}">
-                    <table class="table table-borderless table-hover table-sm w-100">
-                        <tbody>
-                            <tr v-for="f in recordTemplate.recordFieldTemplates" :key="f.orderNo"
-                                :class="{'selected-table-row':f.orderNo == selectedField.orderNo}"
-                                @@click.stop.prevent="selectedField = f">
-                                <td>{{ f.header }}</td>
-                                <td>{{ defaultOptionValue(f) }}</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <div class="flex-grow-1" style="max-height: 20vh; overflow-y: auto;">
+                        <table class="table table-borderless table-hover table-sm w-100" style="max-height:25vh">
+                            <tbody>
+                                <tr v-for="f in recordTemplate.recordFieldTemplates" :key="f.orderNo"
+                                    :class="{'selected-table-row':f.orderNo == selectedField.orderNo}"
+                                    @@click.stop.prevent="selectedField = f">
+                                    <td>{{ f.header }}</td>
+                                    <td>{{ defaultOptionValue(f) }}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                     <div class="d-flex flex-column ml-1">
                         <button class="btn btn-primary" :disabled="!enabled" @@click.stop.prevent="addNewField"><i class="fa fa-plus"></i></button>
                         <button class="btn btn-primary mt-1" :disabled="!enabled" @@click.stop.prevent="editField"><i class="fa fa-pen"></i></button>
