case history records backend

--- a/hNext/hNext.WebClient/Views/Shared/_Layout.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
             @RenderBody()
         </div>
         <footer>
-            <span>© Dmytro Ivanov — @DateTime.Today.Year</span>
+            <span>© Dmytro Ivanov — 2019-@DateTime.Today.Year</span>
         </footer>
     </div>
     <environment include="Development">
