--- a/hNext/hNext.WebClient/wwwroot/css/site.css
+++ b/hNext/hNext.WebClient/wwwroot/css/site.css
@@ -182,3 +182,14 @@ footer {
 /*confirmation dialog*/
 .confirmation-dialog {
   width: 400px; }
+
+/*accordion*/
+.header-closed {
+  transform: rotate(0deg);
+  transition-property: transform;
+  transition-duration: 1s; }
+
+.header-opened {
+  transform: rotate(180deg);
+  transition-property: transform;
+  transition-duration: 1s; }
