--- a/hNext/hNext.WebClient/Sass/site.scss
+++ b/hNext/hNext.WebClient/Sass/site.scss
@@ -241,3 +241,16 @@ footer{
 .confirmation-dialog{
     width: 400px;
 }
+
+/*accordion*/
+.header-closed {
+    transform: rotate(0deg);
+    transition-property: transform;
+    transition-duration: 1s;
+}
+
+.header-opened {
+    transform: rotate(180deg);
+    transition-property: transform;
+    transition-duration:1s;
+}
