case history record showing template

--- a/hNext/hNext.WebClient/Sass/site.scss
+++ b/hNext/hNext.WebClient/Sass/site.scss
@@ -101,6 +101,7 @@ footer{
 
 /*selectable table style*/
 .selected-table-row {
+    background-color: $selected-grid-row-color !important;
     tr {
         background-color: $selected-grid-row-color !important;
     }
