--- a/hNext/hNext.WebClient/Views/Shared/Components/CaseHistoryRecords/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/CaseHistoryRecords/Default.cshtml
@@ -1,19 +1,43 @@
-﻿<template id="case-history-records-template">
-    <div class="m-3 accordion" id="records-acordion">
-        <div class="card" v-for="n in 3">
-            <div class="card-header" :id="`h-${n}`">
-                <h5 class="mb-0 d-flex">
-                    <button class="btn btn-light d-flex flex-row justify-content-between w-100" data-toggle="collapse" :data-target="`#c-${n}`"
-                            @@click="selectRecord(n)">
-                        Record 1
-                        <i class="fa fa-chevron-circle-up" :class="selectedRecord == n ? 'header-opened' : 'header-closed'"></i>
-                    </button>
-                </h5>
-            </div>
-            <div class="collapse" :id="`c-${n}`" data-parent="#records-acordion">
-                <div class="card-body">
-                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+﻿@model IEnumerable<RecordTemplate>
+
+<template id="case-history-records-template">
+    <div class="m-3 d-flex flex-column">
+        <div class="accordion" id="records-acordion">
+            <div class="card" v-for="r in records">
+                <div class="card-header">
+                    <h5 class="mb-0 d-flex">
+                        <button class="btn btn-light d-flex flex-row justify-content-between w-100" data-toggle="collapse" :data-target="`#c-${r.id}`"
+                                @@click="selectRecord(n)">
+                            {{`${r.header} ${r.date}`}}
+                            <i class="fa fa-chevron-circle-up" :class="selectedRecord.id == r.id ? 'header-opened' : 'header-closed'"></i>
+                        </button>
+                    </h5>
                 </div>
+                <div class="collapse" :id="`c-${n}`" data-parent="#records-acordion">
+                    <div class="card-body">
+                        <record></record>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mt-1">
+            <div v-if="recordAddMode">
+                <record class="mb-2" level="0" :patient-id="patientId" :record-template="selectedTemplate"></record>
+                <button class="btn btn-danger w-100 mt-1" :disabled="!enabled"
+                        @@click.stop.prevent="recordAddMode = false">
+                    <i class="fa fa-minus"></i>
+                </button>
+            </div>
+            <div v-else>
+                <select class="custom-select" :disabled="!enabled && !templateLoading" v-model="selectedTemplateId"
+                        asp-items="@new SelectList(Model, nameof(RecordTemplate.Id), nameof(RecordTemplate.Name))">
+                    <option value="">@Localizer[nameof(Resources.SelectTemplate)]</option>
+                    <option value="-1">@Localizer[nameof(Resources.NoTemplateRecord)]</option>
+                </select>
+                <button class="btn btn-primary w-100 mt-2" :disabled="!enabled"
+                        @@click.stop.prevent="addRecordClicked">
+                    <i class="fa fa-plus"></i>
+                </button>
             </div>
         </div>
     </div>
