--- a/hNext/hNext.WebClient/wwwroot/css/site.css
+++ b/hNext/hNext.WebClient/wwwroot/css/site.css
@@ -71,11 +71,12 @@ footer {
   color: white; }
 
 /*selectable table style*/
-.selected-table-row tr {
+.selected-table-row {
   background-color: #85C1E9 !important; }
-
-.selected-table-row td {
-  background-color: #85C1E9 !important; }
+  .selected-table-row tr {
+    background-color: #85C1E9 !important; }
+  .selected-table-row td {
+    background-color: #85C1E9 !important; }
 
 .table-responsive-vertical {
   max-height: 50vh;
