--- a/hNext/hNext.WebClient/Views/Shared/Components/RecordFieldTemplateEditor/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/RecordFieldTemplateEditor/Default.cshtml
@@ -79,9 +79,15 @@
                             <table class="table table-striped table-bordered table-hover table-sm">
                                 <tbody>
                                     <tr v-for="f in field.recordFieldTemplateOptions" :key="f.orderNo"
-                                        :class="{'selected-table-row': f.orderNo == selectedOption.orderNo}"
-                                        @@click="optionClicked(f)">
-                                        <td>{{f.value}}</td>
+                                        :class="{'selected-table-row': f.orderNo == selectedOption.orderNo}">
+                                        <td @@click="optionClicked(f)">{{f.value}}</td>
+                                        <td style="width:0.1%; white-space:nowrap;">
+                                            <div class="custom-control custom-radio">
+                                                <input type="radio" class="custom-control-input" :id="`${f.value}${f.orderNo}}`" name="defaultValue"
+                                                       :value="f.value" v-model="field.defaultValue"/>
+                                                <label class="custom-control-label" :for="`${f.value}${f.orderNo}}`"></label>
+                                            </div>
+                                        </td>
                                     </tr>
                                 </tbody>
                             </table>
