--- a/hNext/hNext.WebClient/Views/Shared/Components/ConfirmationDialog/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/ConfirmationDialog/Default.cshtml
@@ -7,14 +7,14 @@
                 <i class="fa fa-times"></i>
             </button>
         </div>
-        <div class="show-panel modal-window-show-panel flex-column">
+        <div class="show-panel modal-window-show-panel flex-column flex-grow-1">
             <div class="px-1 pt-2 pb-5">
                 <slot></slot>
             </div>
             <div class="d-flex flex-row justify-content-end flex-nowrap mt-2">
                 <button class="btn btn-primary" @@click.stop.prevent="$emit('yes')"><slot name='yes-button'>@Localizer[nameof(Resources.Yes)]</slot></button>
                 <button class="btn ml-2" v-if="!oneOption" :class="cancelButton ? 'btn-primary' : 'btn-danger'" @@click.stop.prevent="$emit('no')"><slot name="no-button">@Localizer[nameof(Resources.No)]</slot></button>
-                <button class="btn btn-danger ml-2" v-if="cancelButton" @@click.stop.prevent="$emit('cancel')"><slot name="cancel-button">@Resources.Cancel</slot></button>
+                <button class="btn btn-danger ml-2" v-if="cancelButton" @@click.stop.prevent="$emit('cancel')"><slot name="cancel-button">@Localizer[nameof(Resources.Cancel)]</slot></button>
             </div>
         </div>
     </div>
