--- a/hNext/hNext.WebClient/Views/Shared/Components/Record/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/Record/Default.cshtml
@@ -11,10 +11,10 @@
                 @Localizer[nameof(Resources.RecordContainsEmptyFieldsDelete)]?
             </confirmation-dialog>
             <confirmation-dialog v-if="showSaveConfirmation" :level="level+1" @@yes="save" @@no="showSaveConfirmation = false">
-                @Localizer[nameof(Resources.SaveAndExit)]
+                @Localizer[nameof(Resources.SaveAndExit)]?
             </confirmation-dialog>
             <confirmation-dialog v-if="showCancelConfirmation" :level="level+1" @@yes="exit" @@no="showCancelConfirmation=false">
-                @Localizer[nameof(Resources.CancelAndExit)]
+                @Localizer[nameof(Resources.CancelAndExit)]?
             </confirmation-dialog>
             <div class="d-flex flex-column flex-lg-row ml-lg-3">
                 <div class="form-group row">
@@ -22,7 +22,7 @@
                     <div class="col-lg-auto">
                         <div><span v-if="emptyDateError" class="text-danger">@Localizer[nameof(Resources.EnterDate)]</span></div>
                         <input type="date" class="form-control" v-model="date" :disabled="!enabled"
-                               :class="{'input-validation-error':emptyDateError}" />
+                               :class="{'input-validation-error':emptyDateError}" :min="startDate"/>
                     </div>
                 </div>
                 <div class="form-group row ml-lg-2">
@@ -39,7 +39,7 @@
                 </div>
                 <button class="btn btn-primary ml-lg-1" @@click.stop.prevent="insertRecordRow(-1)"><i class="fa fa-level-down-alt" :disabled="!enabled"></i></button>
             </div>
-            <div v-for="r in record.recordFields" class="d-flex flex-column flex-lg-row mb-2">
+            <div v-for="r in fields" class="d-flex flex-column flex-lg-row mb-2">
                 <label class="mb-1 mb-lg-0 text-nowrap mx-lg-2 align-middle align-self-lg-start">{{(r.recordFieldTemplate || {}).header}}</label>
                 <input v-if="(r.recordFieldTemplate || {}).recordFieldType == 1" class="form-control mb-1" type="number" step="1" :disabled="!enabled" v-model="r.value" />
                 <input v-else-if="(r.recordFieldTemplate || {}).recordFieldType == 2" class="form-control mb-1" type="number" v-model="r.value" :disabled="!enabled" />
@@ -62,20 +62,23 @@
             </div>
         </form>
         <div v-else class="d-flex flex-column">
+            <confirmation-dialog v-if="showDeleteConfirmation" :level="level+1" @@yes="deleteRecord" @@no="showDeleteConfirmation=false">
+                @Localizer[nameof(Resources.DeleteRecord)]?
+            </confirmation-dialog>
             <p>
-                <span v-for="r in record.recordFields">
+                <span v-for="r in fields">
                     {{ `${(r.recordFieldTemplate || {}).header || ''}${r.recordFieldTemplate ? ': ' : ''}${r.value}` }}
-                   <span v-if="(r.recordFieldTemplate || {}).newLine">
-                       <br />
-                       <br />
-                   </span>
+                    <span v-if="(r.recordFieldTemplate || {}).newLine">
+                        <br />
+                        <br />
+                    </span>
                 </span>
             </p>
             <div class="d-flex flex-row mt-1 justify-content-between justify-content-lg-end">
-                <button class="btn btn-danger mr-lg-2" @@click.stop.prevent="" :disabled="!enabled">
+                <button class="btn btn-danger mr-lg-2" @@click.stop.prevent="showDeleteConfirmation=true" :disabled="!enabled">
                     @Localizer[nameof(Resources.Delete)]
                 </button>
-                <button class="btn btn-primary" @@click.stop.prevnt="editMode=true" :disabled="!enabled">
+                <button class="btn btn-primary" @@click.stop.prevent="editMode=true" :disabled="!enabled">
                     @Localizer[nameof(Resources.Change)]
                 </button>
             </div>
