--- a/hNext/hNext.WebClient/Views/Shared/_Layout.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿@inject Microsoft.Extensions.Configuration.IConfiguration Configuration
 
 <!DOCTYPE html>
-<html>
+<html lang="uk">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
