--- a/hNext/hNext.WebClient/Views/Shared/Components/Record/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/Record/Default.cshtml
@@ -93,7 +93,7 @@
             <div class="d-flex flex-row">
                 <div class="flex-grow-1 p-1" style="border:1px solid black;">
                     <p v-for="d in diagnoses">
-                        {{`{d.diagnosys.name} {d.diagnosys.icd ? d.diagnosys.icd.letter + d.diagnosys.icd.primary + '.' + d.diagosys.icd.secondary : ''`}}
+                        {{`${d.diagnosys.name} ${d.diagnosys.icd ? d.diagnosys.icd.letter + d.diagnosys.icd.primaryNumber + '.' + d.diagnosys.icd.secondaryNumber : ''}`}}
                     </p>
                 </div>
                 <div class="ml-1 d-flex flex-column">
