--- a/hNext/hNext.WebClient/Views/Shared/Components/Prescription/Default.cshtml
+++ b/hNext/hNext.WebClient/Views/Shared/Components/Prescription/Default.cshtml
@@ -1,17 +1,28 @@
 <template id='prescription-template'>
     <div class="d-flex flex-column">
-        <div class="d-flex flex-row">
-            <div class="flex-grow-1">
-
+        <div class="d-flex flex-column-reverse" :class="!editMode ? 'flex-lg-row' : ''">
+            <div class="flex-lg-grow-1">
+                <div v-if="editMode" class="d-flex flex-column">
+                    <div class="d-flex flex-row justify-content-between mt-2">
+                        <button class="btn btn-primary" @@click.stop.prevent="">
+                            @Localizer[nameof(Resources.Save)]
+                        </button>
+                        <button class="btn btn-danger" @@click.stop.prevent="">
+                            @Localizer[nameof(Resources.Cancel)]
+                        </button>
+                    </div>
+                </div>
             </div>
-            <div>
-                <button class="btn btn-primary">
-                    <i class="fa fa-arrow-down"></i>
-                </button>
-                <button class="btn btn-primary">
+            <div class="align-self-end">
+                <button class="btn btn-outline-info" v-if="editMode"
+                    @@click.stop.prevent="editMode=false">
                     <i class="fa fa-arrow-up"></i>
                 </button>
-                <button class="btn btn-primary">
+                <button class="btn btn-outline-info" v-else
+                    @@click.stop.prevent="editMode=true">
+                    <i class="fa fa-arrow-down"></i>
+                </button>
+                <button class="btn btn-outline-info">
                     <i class="fa fa-pen"></i>
                 </button>
             </div>
