--- a/hNext/hNext.WebClientBlazor/Pages/Index.razor
+++ b/hNext/hNext.WebClientBlazor/Pages/Index.razor
@@ -1,5 +1,9 @@
-﻿@page "/"
+﻿@page  "/"
+@inject NavigationManager NavigationManager
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+@code
+{   protected override void OnInitialized()
+    {
+        NavigationManager.NavigateTo("patients");
+    }
+}
