--- a/hNext/hNext.WebClientBlazor/_Imports.razor
+++ b/hNext/hNext.WebClientBlazor/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.JSInterop
 @using hNext.WebClientBlazor
 @using hNext.WebClientBlazor.Shared
+@using hNext.WebClientBlazor.ViewModels
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.Extensions.Localization
 @using hNext.ResourceLibrary.Resources
