patient seacrh waiting and error message

--- a/hNext/hNext.WebClientBlazor/Shared/MainLayout.razor
+++ b/hNext/hNext.WebClientBlazor/Shared/MainLayout.razor
@@ -11,7 +11,7 @@
         </div>
     </header>
     <div class="content-wrapper">
-        <div class="container-fluid ml-0">
+        <div class="container-fluid mx-0">
             <div class="row no-gutters mx-0">
                 <div class="col-lg-8 col-xl-9 d-flex flex-row">
                     <nav>
