--- a/hNext/hNext.WebClientBlazor/Pages/PatientsPageComponent.razor
+++ b/hNext/hNext.WebClientBlazor/Pages/PatientsPageComponent.razor
@@ -3,24 +3,31 @@
 @inherits PatientsPageComponentViewModel
 
     <div class="f-flex flex-column flex-grow-1 mt-2">
+        @if(showError)
+        {
+            <div class="alert alert-danger">
+                @errorText
+                <button type="button" class="close" @onclick="()=>showError = false"><i class="fa fa-times"></i></button>
+            </div>
+        }
         <form class="d-flex justify-content-md-between flex-column flex-md-row flex-wrap">
             <div class="form-group row flex-md-nowrap flex-fill">
                 <label class="col-md-auto col-form-label text-md-right pr-0 ml-md-1">@Localizer[nameof(Resources.FirstName)]</label>
                 <div class="col-md-auto mr-md-2 flex-grow-1 pl-2">
-                    <input class="form-control" @bind="SearchModel.Name"/>
+                    <input class="form-control" @bind="SearchModel.Name" disabled="@loading"/>
                 </div>
             </div>
             <div class="form-group row flex-md-nowrap flex-sm-fill">
                 <label class="col-md-auto col-form-label text-md-right pr-0 ml-md-1">@Localizer[nameof(Resources.YearOfBirth)]</label>
                 <div class="col-md-auto mr-md-2 flex-grow-1 pl-2">
-                    <input asp-for="Search.YearOfBirth" class="form-control" @bind="SearchModel.YearOfBirth"
-                           max="@DateTime.Today.Year" min="@(DateTime.Today.Year-120)" />
+                    <input type="number" class="form-control" @bind="SearchModel.YearOfBirth"
+                           max="@DateTime.Today.Year" min="@(DateTime.Today.Year-120)" disabled="@loading"/>
                 </div>
             </div>
             <div class="form-group row flex-md-nowrap flex-fill">
                 <label class="col-md-auto col-form-label text-md-right pr-0 ml-md-1">@Localizer[nameof(Resources.Region)]</label>
                 <div class="col-md-auto mr-md-2 flex-grow-1 pl-2">
-                    <select class="custom-select" @bind="SearchModel.RegionId">
+                    <select class="custom-select" @bind="SearchModel.RegionId" disabled="@loading">
                         <option value="">@Localizer[nameof(Resources.SelectRegion)]</option>
                         @foreach(var region in Regions)
                         {
@@ -32,7 +39,7 @@
             <div class="form-group row flex-md-nowrap flex-fill">
                 <label class="col-md-auto col-form-label text-md-right pr-0 ml-md-1">@Localizer[nameof(Resources.District)]</label>
                 <div class="col-md-auto mr-md-2 flex-grow-1 pl-2">
-                    <select class="custom-select" asp-for="Search.DistrictId" @bind="SearchModel.DistrictId">
+                    <select class="custom-select" asp-for="Search.DistrictId" @bind="SearchModel.DistrictId" disabled="@loading">
                         <option value="">@Localizer[nameof(Resources.SelectDistrict)]</option>
                         @foreach(var district in Districts)
                         {
@@ -46,11 +53,11 @@
                 <div class="col-md-auto mr-md-2 flex-grow-1 pl-2">
                     @if (FilteredCities.Count() > 50)
                     {
-                        <input class="form-control" @bind="CityName" />
+                        <input class="form-control" @bind="CityName" disabled="@loading"/>
                     }
                     else
                     {
-                        <select class="custom-select" @bind="SearchModel.CityId">
+                        <select class="custom-select" @bind="SearchModel.CityId" disabled="@loading">
                             <option value="">@Localizer[nameof(Resources.SelectCity)]</option>
                             <option value="-1" v-if="cities.length">@Localizer[nameof(Resources.ResetSearch)]</option>
                             @foreach(var city in FilteredCities)
@@ -62,8 +69,14 @@
                 </div>
             </div>
             <div class="d-flex flex-column flex-md-row flex-md-nowrap ml-md-auto">
-                <button type="button" class="btn btn-primary mr-md-1 mb-2 mb-md-0" @onclick="SearchPatients">@Localizer[nameof(Resources.Search)]</button>
-                <button type="button" class="btn btn-primary mr-md-2" @onclick="CreateNewPatient">@Localizer[nameof(Resources.NewPatient)]</button>
+                <button type="button" class="btn btn-primary mr-md-1 mb-2 mb-md-0" @onclick="SearchPatients" disabled="@loading">
+                    @if(loading)
+                    {
+                        <div class="spinner-border spinner-border-sm"></div>
+                    }
+                    @Localizer[nameof(Resources.Search)]
+                </button>
+                <button type="button" class="btn btn-primary mr-md-2" @onclick="CreateNewPatient" disabled="@loading">@Localizer[nameof(Resources.NewPatient)]</button>
             </div>
         </form>
         <div class="mt-2 table-responsive-vertical">
@@ -79,7 +92,7 @@
                     @foreach (var patient in FoundPatients)
                     {
                         <tr class="@(patient?.Id == SelectedPatient?.Id ? "selected-table-row": string.Empty)"
-                            @onclick="@(()=>SelectedPatient = patient)" @ondblclick="()=> { }">
+                            @onclick="@(()=>SelectedPatient = !loading ? patient : SelectedPatient)" @ondblclick="()=> { }">
                             <td>@($"{patient?.Person?.FamilyName} {patient?.Person?.FirstName} {patient?.Person?.Patronimic}"?.Trim())</td>
                             <td>@patient?.Person?.DateOfBirth?.ToString("dd.MM.yyyy")</td>
                             <td>
