loading districts and cities by region

--- a/hNext/hNext.WebClientBlazor/Pages/PatientsPageComponent.razor
+++ b/hNext/hNext.WebClientBlazor/Pages/PatientsPageComponent.razor
@@ -27,7 +27,7 @@
             <div class="form-group row flex-md-nowrap flex-fill">
                 <label class="col-md-auto col-form-label text-md-right pr-0 ml-md-1">@Localizer[nameof(Resources.Region)]</label>
                 <div class="col-md-auto mr-md-2 flex-grow-1 pl-2">
-                    <select class="custom-select" @bind="SearchModel.RegionId" disabled="@loading">
+                    <select class="custom-select" @bind="RegionId" disabled="@(loading || Regions.Count() == 0)">
                         <option value="">@Localizer[nameof(Resources.SelectRegion)]</option>
                         @foreach(var region in Regions)
                         {
@@ -39,7 +39,7 @@
             <div class="form-group row flex-md-nowrap flex-fill">
                 <label class="col-md-auto col-form-label text-md-right pr-0 ml-md-1">@Localizer[nameof(Resources.District)]</label>
                 <div class="col-md-auto mr-md-2 flex-grow-1 pl-2">
-                    <select class="custom-select" asp-for="Search.DistrictId" @bind="SearchModel.DistrictId" disabled="@loading">
+                    <select class="custom-select" asp-for="Search.DistrictId" @bind="SearchModel.DistrictId" disabled="@(loading || Districts.Count() == 0)">
                         <option value="">@Localizer[nameof(Resources.SelectDistrict)]</option>
                         @foreach(var district in Districts)
                         {
@@ -53,11 +53,11 @@
                 <div class="col-md-auto mr-md-2 flex-grow-1 pl-2">
                     @if (FilteredCities.Count() > 50)
                     {
-                        <input class="form-control" @bind="CityName" disabled="@loading"/>
+                        <input class="form-control" @bind-value="CityName" @bind-value:event="oninput" disabled="@loading"/>
                     }
                     else
                     {
-                        <select class="custom-select" @bind="SearchModel.CityId" disabled="@loading">
+                        <select class="custom-select" @bind="SearchModel.CityId" disabled="@(loading || Cities.Count() == 0)">
                             <option value="">@Localizer[nameof(Resources.SelectCity)]</option>
                             <option value="-1" v-if="cities.length">@Localizer[nameof(Resources.ResetSearch)]</option>
                             @foreach(var city in FilteredCities)
