--- a/hNext/hNext.WebClientBlazor/Shared/MainLayout.razor
+++ b/hNext/hNext.WebClientBlazor/Shared/MainLayout.razor
@@ -33,8 +33,8 @@
                     <div class="d-flex flex-row flex-grow-1 h-100">
                         @switch(SelectedSideTab)
                         {
-                            case nameof(PatientDetailsTabComponent):
-                                <PatientDetailsTabComponent/>
+                            case nameof(PatientDetailsTab):
+                                <PatientDetailsTab/>
                                 break;
                         }
                     </div>
@@ -42,7 +42,7 @@
                         <ul class="nav nav-tabs flex-column">
                             <AuthorizeView>
                                 <li class="nav-item">
-                                    <a class="nav-link side-tab-selector p-1 @(SelectedSideTab == nameof(PatientDetailsTabComponent) ? "active" : "")" @onclick="()=>SelectedSideTab = nameof(PatientDetailsTabComponent)">
+                                    <a class="nav-link side-tab-selector p-1 @(SelectedSideTab == nameof(PatientDetailsTab) ? "active" : "")" @onclick="()=>SelectedSideTab = nameof(PatientDetailsTab)">
                                         @Localizer[nameof(Resources.Patient)]
                                     </a>
                                 </li>
@@ -60,5 +60,5 @@
 
 @code
 {
-    private string SelectedSideTab { get; set; } = nameof(PatientDetailsTabComponent);
+    private string SelectedSideTab { get; set; } = nameof(PatientDetailsTab);
                         }
