--- a/hNext/hNext.WebClientBlazor/Pages/PatientsPage.razor
+++ b/hNext/hNext.WebClientBlazor/Pages/PatientsPage.razor
@@ -1,9 +1,9 @@
 ﻿@page  "/patients"
 
-@inherits PatientsPageComponentViewModel
+@inherits PatientsPageViewModel
 
     <ModalDialogComponent @ref="PatientEditor">
-        <PersonEditorComponent/>
+        <PersonEditor/>
     </ModalDialogComponent>
     
     <div class="f-flex flex-column flex-grow-1 mt-2">
